--- a/app/src/main/res/layout/activity_user_exercise_prescription.xml
+++ b/app/src/main/res/layout/activity_user_exercise_prescription.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/white_bg"
     tools:context=".UserExercisePrescription">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
