--- a/app/src/main/res/layout/activity_admin_homepage.xml
+++ b/app/src/main/res/layout/activity_admin_homepage.xml
@@ -29,7 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:background="@color/grey"
             app:cardCornerRadius="20dp">
 
             <LinearLayout
@@ -67,7 +66,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey"
+                android:background="@color/black"
                 android:orientation="vertical"
                 android:padding="20dp">
 
