--- a/app/src/main/res/layout/activity_sign_up_patient.xml
+++ b/app/src/main/res/layout/activity_sign_up_patient.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_input_white_blue"
+        android:background="@drawable/custom_input_maroon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Password"
@@ -34,7 +34,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_input_white_blue"
+        android:background="@drawable/custom_input_maroon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Email"
@@ -73,7 +73,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_input_white_blue"
+        android:background="@drawable/custom_input_maroon"
         android:drawablePadding="12dp"
         android:paddingLeft="10dp"
         android:ems="10"
@@ -93,7 +93,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_input_white_blue"
+        android:background="@drawable/custom_input_maroon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Height (cm)"
@@ -113,7 +113,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_input_white_blue"
+        android:background="@drawable/custom_input_maroon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Weight (kg)"
@@ -133,7 +133,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_input_white_blue"
+        android:background="@drawable/custom_input_maroon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="D.O.B (dd-MM-yyyy)"
@@ -151,7 +151,7 @@
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:background="@drawable/custom_input_maroon"
+        android:background="@drawable/custom_input_maroon_solid"
         android:drawablePadding="6dp"
         android:fontFamily="sans-serif-medium"
         android:paddingLeft="12dp"
@@ -201,7 +201,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gender:"
-            android:textColor="@color/blue"
+            android:textColor="@color/maroon"
             android:textSize="20dp"
             android:textStyle="bold" />
 
