--- a/app/src/main/res/layout/activity_user_exercise_chart.xml
+++ b/app/src/main/res/layout/activity_user_exercise_chart.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserData">
+    tools:context=".UserExerciseChart">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
