--- a/app/src/main/res/layout/activity_user_homepage.xml
+++ b/app/src/main/res/layout/activity_user_homepage.xml
@@ -45,7 +45,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/grey"
+                    android:background="@color/black"
                     android:orientation="vertical"
                     android:paddingTop="20dp">
 
@@ -83,7 +83,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/grey"
+                    android:background="@color/black"
                     android:orientation="vertical"
                     android:paddingTop="20dp">
 
