--- a/app/src/main/res/layout/activity_admin_progress_chart_option.xml
+++ b/app/src/main/res/layout/activity_admin_progress_chart_option.xml
@@ -31,7 +31,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey"
+                android:background="@color/black"
                 android:padding="20dp"
                 android:orientation="horizontal">
 
@@ -64,7 +64,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey"
+                android:background="@color/black"
                 android:padding="20dp"
                 android:orientation="horizontal">
 
